Revision history for Mojolicious-Plugin-Form.

{{$NEXT}}

0.007  2015-04-28 17:00:16 CEST
       - improve coverage

0.006  2015-04-07 16:30:03 CEST
       - add badges in pod

0.005  2014-08-16 23:39:44 CEST
       - badges in pod

0.004  2014-08-16 09:19:35 CEST
       - adjusted travis

0.003  2014-05-08 14:02:27 CEST
       - release to cpan

0.002  2014-05-03 03:24:22 CEST
       - initial version
       
0.001  2014-05-03
       - Initial release.