@@ -1,0 +1,19 @@
+#!perl
+
+BEGIN {
+  unless ($ENV{AUTHOR_TESTING}) {
+    require Test::More;
+    Test::More::plan(skip_all => 'these tests are for author testing');
+  }
+}
+
+use Test::More;
+
+eval "use Test::Pod::Spelling::CommonMistakes";
+if ( $@ ) {
+  plan skip_all => 'Test::Pod::Spelling::CommonMistakes required for testing POD';
+} 
+else {
+  all_pod_files_ok();
+}
+
