@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-Form.
 
 {{$NEXT}}
+       - improve tests
 
 0.007  2015-04-28 17:00:16 CEST
        - improve coverage
